--- a/src/main/menubar/Menubar2.css
+++ b/src/main/menubar/Menubar2.css
@@ -9,6 +9,7 @@
 .menuBar{
     /*padding: 1rem; */
     background: rgb(225, 225, 225);
+    /* background: #dadee1; */
     width: 100%;
     height: 13%;
     margin-bottom: 1rem;
@@ -19,6 +20,7 @@
     height: 87%;
     margin: auto;
     border: 0px dotted skyblue;
+    /* background: #e9ecef; */
 }
 .tabs {
     height: 13%;
