--- a/src/main/MainPage.css
+++ b/src/main/MainPage.css
@@ -51,7 +51,7 @@
     margin-top: 0px;
 } */
 .outer_Chall{
-    border: 1px solid violet;
+    /* border: 1px solid violet; */
     width: 85%;
     height: 65%;
     margin: auto;
