--- a/src/main/calendar/Calendar.css
+++ b/src/main/calendar/Calendar.css
@@ -18,6 +18,21 @@ abbr[title] {
     box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
     text-decoration: none;
   }
+  .react-calendar2 {
+    width: 450px;
+    max-width: 100%;
+    height: 570px;
+    max-height: 100%;
+    height: 100%;
+    background: white;
+    border: 1px solid #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.125em;
+    margin: auto;
+    border-radius: 12px;
+    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+    text-decoration: none;
+  }
   
   /* .react-calendar--doubleView {
     width: 700px;
