--- a/src/member/MainFront.css
+++ b/src/member/MainFront.css
@@ -2,7 +2,7 @@
     /* border: 1px solid black; */
     /* background-color: #ba99c3ae; */
     background: linear-gradient(
-        to right,
+            to right,
             rgba(219, 190, 227, 0) 5%,
             rgba(219, 190, 227, 0.5) 20%,
             rgba(219, 190, 227, 0.75) 50%,
@@ -12,11 +12,33 @@
     position: relative;
     width: 50%;
     height: 100vh;
-    z-index: 7;
+    z-index: 6;
     float: right;
     /* box-shadow: 0px 0px 60px 0px red */
     /* top: 0;
     right: 0;
     bottom: 0;
     left: 30%; */
+}
+
+.copyRightArea {
+    box-sizing: border-box;
+    /*border: 1px solid red;*/
+    position: absolute;
+    margin: auto;
+    text-align: center;
+    top: 93%;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 7;
+}
+
+.copyRightArea p {
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    color: #9a9a9a;
+    font-family: KoPubWorldDotum;
+    font-weight: lighter;
+    font-size: 12px;
 }
