--- a/src/template/style/TemplateWrite.css
+++ b/src/template/style/TemplateWrite.css
@@ -53,11 +53,12 @@
 /*.template-input input,#template-input select{*/
 /*    align-content: center;*/
 /*}*/
-input{
+.template-input input{
     border: none;
     border-bottom: 2px solid #000000;
     /* width: 97%; */
     height: 40px;
+    width: 70%;
     font-size: 30px;
     margin-top: 5px;
     text-align: center;
