--- a/src/main/menubar/Menubar2.css
+++ b/src/main/menubar/Menubar2.css
@@ -5,16 +5,21 @@
     width: 67%;
     height: 100%;
     margin: auto;
+    margin-top: -10px;
 }
 .menuBar{
     /*padding: 1rem; */
     background: rgb(225, 225, 225);
     /* background: #dadee1; */
     width: 100%;
-    height: 7%;
+    height: 50px;
     margin-bottom: 1rem;
     text-align: center;
     /* margin-left: -100px; */
+    border: 0px dotted pink;
+    background: linear-gradient( to right, rgba(219, 190, 227, 0) 5%, rgb(218, 218, 218) 20%, rgb(218, 218, 218) 50%, rgb(218, 218, 218) 75%, rgba(219, 190, 227, 0) 100%  );
+    position: relative;
+
 }
 .contentArea{
     width: 100%;
@@ -31,8 +36,9 @@
     font-weight: bold;
     display: inline-block;
     color: #c4c4c4;
-    color: rgb(235, 234, 234);
-    padding: 23px 40px;
+    color: rgb(255, 255, 255);
+    padding: 0px 80px;
+    border: 0px dotted skyblue;
 }
 .tabs li.active{
     color: black;
