--- a/src/main/profile/Profile.css
+++ b/src/main/profile/Profile.css
@@ -1,6 +1,23 @@
+.profile-box {
+    margin: auto;
+}
+.react-calendar2{
+    width: 450px;
+    max-width: 100%;
+    height: 570px;
+    max-height: 100%;
+    height: 100%;
+    background: white;
+    border: 1px solid #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.125em;
+    border-radius: 12px;
+    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+    text-decoration: none;
+}
 .profile-box div{
     box-sizing: border-box;
-    /* border: 3px dotted skyblue; */
+    border: 0px dotted skyblue;
     margin-left: 30px;
 }
 .pro-pic{
@@ -10,7 +27,7 @@
     float: left;
 }
 .pro-nic{
-    /* border: 1px solid orange; */
+     border: 1px solid orange;
     height: 100px;
     width: 20%;
     float: left;
