--- a/src/feed/FeedInsert.css
+++ b/src/feed/FeedInsert.css
@@ -2,8 +2,8 @@
     display: flex;
 }
 .feed-insert-body{
-    height: 620px;
-    width: 100%;
+    /*height: 620px;*/
+    /*width: 100%;*/
     border-radius: 6px;
     /*border: 10px solid black;*/
 }
