--- a/src/member/MainFront.css
+++ b/src/member/MainFront.css
@@ -4,10 +4,10 @@
     background: linear-gradient(
             to right,
             rgba(219, 190, 227, 0) 5%,
-            rgba(219, 190, 227, 0.5) 20%,
-            rgba(219, 190, 227, 0.75) 50%,
-            rgba(219, 190, 227, 0.75) 75%,
-            rgba(219, 190, 227, 1) 100%
+            rgba(87, 18, 162, 0.25) 20%,
+            rgba(87, 18, 162, 0.5) 50%,
+            rgba(87, 18, 162, 0.75) 75%,
+            rgb(87, 18, 162, 0.9) 100%
     );
     position: relative;
     width: 50%;
@@ -41,4 +41,11 @@
     font-family: KoPubWorldDotum;
     font-weight: lighter;
     font-size: 12px;
+}
+
+
+@media only screen and (max-width: 1300px) {
+    .copyRightArea {
+        display: none;
+    }
 }
