--- a/src/member/TitleInfo.css
+++ b/src/member/TitleInfo.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 1300px) {
+    .TitleInfoWrap {
+        display: none;
+    }
+}
+
 .monitorImg{
     width: 35rem;
     margin: auto;
