--- a/src/main/profile/Profile.css
+++ b/src/main/profile/Profile.css
@@ -27,9 +27,9 @@
     float: left;
 }
 .pro-nic{
-     border: 1px solid orange;
-    height: 100px;
-    width: 20%;
+    border: 1px solid orange;
+    height: 40%;
+    width: 30%;
     float: left;
 }
 .pro-post-count{
