--- a/src/challenge/style/chat.scss
+++ b/src/challenge/style/chat.scss
@@ -27,7 +27,7 @@ input[type='number']::-webkit-outer-spin-button {
 
 #chatt{
 	width: 100%;
-	margin: 0 auto;
+	//margin: 0 auto;
   #title{
     font-size: 30pt;
     font-family: 'SourceSansPro-Light';
@@ -41,36 +41,42 @@ input[type='number']::-webkit-outer-spin-button {
     // overflow: scroll;
     border-radius: 18px;
     position: relative;
+    border: 3px solid pink;
+  }
+  .me2{
+    float: right;
+    border: 0px solid #091c9a;
+    //position: relative;
+    margin-top: 10px;
+  }
+  .me{
+    background-color : rgba(180, 135, 203, 0.27);
+    margin : 50px 0px 10px 40%;
+    border-radius: 0px;
+    //height: 20%;
+    border: 2px solid #091c9a;
+    width: 60%;
+    //float: right;
+  }
+  .other2{
+    float: left;
+    border: 0px solid #da0329;
+    margin-top: 20px;
+  }
+  .other{
+    margin: 60px 0px 2px 0px;
+    background-color: rgba(244, 241, 38, 0.27);
+    border-radius: 10px;
+    //height: 20%;
+    width: 60%;
+    //float: left;
+  }
 
-    .talk-shadow{
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-
-    div{
-      width: 60%;
-      display: block;
-      padding: 10px;
-      border-radius:10px;
-      box-sizing: border-box;
-
-      &.me{
-        background-color : rgba(180, 135, 203, 0.27);
-        margin : 0px 0px 20px 40%;	
-        border-radius: 0px;
-        height: 20%;
-      }
-
-      &.other{
-        margin : 20px 0px 2px 0;	
-        background-color : rgba(244, 241, 38, 0.27);
-        border-radius: 0px;
-        height: 20%;
-      }
-    }
+  .chatMsg{
+    border: 1px solid #219d08;
+  }
+  .chatDate{
+    border: 1px solid skyblue;
   }
 
   #name{
