--- a/src/main/menubar/Menubar2.css
+++ b/src/main/menubar/Menubar2.css
@@ -44,4 +44,15 @@
     color: black;
     height: 100%;
 }
+/*==============================================*/
+.underline {
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    right: 0;
+    height: 1px;
+    /*background: #8855ff;*/
+    width: 100px;
+}
+
 
