마지막수정

--- a/src/challengeChat/challenge.css
+++ b/src/challengeChat/challenge.css
@@ -1,51 +1,51 @@
 .outer_all{
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     width: 973px;
     height: 720px;
     margin-left: -3px;
 }
 .outer_1{
-    border: 1px solid blue;
+    /*border: 1px solid blue;*/
     width: 50%;
     height: 100%;
     float: left;
 }
 .outer_2{
-    border: 1px solid green;
+    /*border: 1px solid green;*/
     width: 50%;
     height: 100%;
     float: left;
 }
 .outer_top3{
-    border: 1px solid coral;
+    /*border: 1px solid coral;*/
     width: 100%;
     height: 30%;
 }
 .outer_rank{
-    border: 1px solid sienna;
+    /*border: 1px solid sienna;*/
     width: 100%;
     height: 100%;
 }
 .outer_t3{
-    border: 1px solid springgreen;
+    /*border: 1px solid springgreen;*/
     width: 33.3%;
     height: 100%;
     float: left;
 }
 .outer_t1{
-    border: 1px solid tomato;
+    /*border: 1px solid tomato;*/
     width: 33.3%;
     height: 100%;
     float: left;
 }
 .outer_t2{
-    border: 1px solid violet;
+    /*border: 1px solid violet;*/
     width: 33.3%;
     height: 100%;
     float: left;
 }
 .outer_chall{
-    border: 1px solid steelblue;
+    /*border: 1px solid steelblue;*/
     width: 97.5%;
     height: 100px;
     margin: auto;
